--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     // Optional -- Mockito framework
     testCompile 'org.mockito:mockito-core:1.10.19'
+    compile 'com.google.code.gson:gson:2.8.2'
 }
+
+
