Updated the manifest and dependencies for the google calendar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Send_text" />
-        <activity android:name=".EditTemplate"></activity>
+        <activity android:name=".EditTemplate" />
     </application>
 
 </manifest>
