--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:design:25.4.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -43,6 +44,8 @@ dependencies {
     testCompile 'org.mockito:mockito-core:1.10.19'
     compile 'com.google.code.gson:gson:2.8.2'
 }
+
+
 
 
 
