--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,15 @@
     package="com.example.chad.smstrialapp">
 
     <uses-sdk android:minSdkVersion="14" />
+
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -27,7 +30,8 @@
         <activity android:name=".SendText" />
         <activity android:name=".EditTemplate" />
         <activity android:name=".GoogleCalApi" />
-        <activity android:name=".parseCalendar"></activity>
+        <activity android:name=".parseCalendar" />
+        <activity android:name=".obtainDate"></activity>
     </application>
 
 </manifest>
