--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     // Optional -- Mockito framework
     testCompile 'org.mockito:mockito-core:1.10.19'
     compile 'com.google.code.gson:gson:2.8.2'
+    compile 'org.apache.commons:commons-collections4:4.1'
 }
 
 
