--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     testCompile 'org.mockito:mockito-core:1.10.19'
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'org.apache.commons:commons-collections4:4.1'
+    compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
 }
 
 
